// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test App snapshot 1`] = `
<div
  id="app"
>
  <img
    alt="Vue logo"
    src="./assets/logo.png"
  />
   
  <div
    class="hello"
  >
    <h1>
      Welcome to Your Vue.js App
    </h1>
     
    <h2>
      Welcome to Your Vue.js App
    </h2>
     
    <h3>
      123
    </h3>
  </div>
</div>
`;

exports[`test HelloWorld snapshot 1`] = `
<div
  class="hello"
>
  <h1>
    test
  </h1>
   
  <h2>
    test
  </h2>
   
  <h3>
    123
  </h3>
</div>
`;
